fix : overlay bg visible

--- a/src/assets/styles/sass/layouts/_global.scss
+++ b/src/assets/styles/sass/layouts/_global.scss
@@ -56,6 +56,8 @@ body {
     inset: 0;
     z-index: -9999;
 
+    opacity: 0;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,6 +77,8 @@ body {
     position: fixed;
     inset: 0;
     z-index: -9999;
+
+    opacity: 0;
 
     display: flex;
     justify-content: center;
