--- a/src/assets/styles/sass/output.css
+++ b/src/assets/styles/sass/output.css
@@ -678,6 +678,7 @@ body main {
   position: fixed;
   inset: 0;
   z-index: -9999;
+  opacity: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -694,6 +695,7 @@ body main {
   position: fixed;
   inset: 0;
   z-index: -9999;
+  opacity: 0;
   display: flex;
   justify-content: center;
   align-items: center;
